[gd_scene load_steps=12 format=3 uid="uid://b60elt2xyh34y"]

[ext_resource type="Script" uid="uid://bxnwr1lwha8in" path="res://scripts/enemy_fast.gd" id="1_pufb0"]
[ext_resource type="Texture2D" uid="uid://bykb6256nf7yh" path="res://assets/sprites/enemies/angel/attack_angel_anim.png" id="2_pufb0"]
[ext_resource type="Texture2D" uid="uid://cm6xaqdn4tqjf" path="res://assets/sprites/enemies/angel/idle_angel_anim.png" id="3_pufb0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ulpps"]
atlas = ExtResource("2_pufb0")
region = Rect2(0, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw8yf"]
atlas = ExtResource("2_pufb0")
region = Rect2(62, 0, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut34u"]
atlas = ExtResource("3_pufb0")
region = Rect2(0, 0, 53, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ril4"]
atlas = ExtResource("3_pufb0")
region = Rect2(53, 0, 53, 57)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ra3w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulpps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw8yf")
}],
"loop": false,
"name": &"attack_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut34u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ril4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ra3w"]
size = Vector2(78.9091, 71.7391)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uy6h"]
size = Vector2(14, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(10.1808, 21.7)

[node name="EnemyFast" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_pufb0")

[node name="EnemyAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -0.5)
scale = Vector2(0.354839, 0.418182)
sprite_frames = SubResource("SpriteFrames_4ra3w")
animation = &"attack_animation"

[node name="Hitbox" type="Area2D" parent="EnemyAnimation"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyAnimation/Hitbox"]
position = Vector2(-7.15256e-06, 1.19566)
shape = SubResource("RectangleShape2D_4ra3w")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-2, -1.5)
shape = SubResource("RectangleShape2D_5uy6h")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-2, -1.5)
scale = Vector2(1.37514, 1.05991)
shape = SubResource("RectangleShape2D_md0e3")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.2

[node name="KnockbackDuration" type="Timer" parent="."]
wait_time = 0.1

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(7, -16)

[connection signal="animation_finished" from="EnemyAnimation" to="." method="_on_enemy_animation_finished"]
[connection signal="area_entered" from="EnemyAnimation/Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="EnemyAnimation/Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="KnockbackDuration" to="." method="_on_knockback_duration_timeout"]
